# Awareness-Network

./: .gitignore  DEPLOYMENT_GUIDE.md  GOLDEN_RATIO_DESIGN.md  MEMORY_ORGANIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  UI_DESIGN.md  package.json  pnpm-lock.yaml  seed-enterprise-vectors.mjs  seed-latentmas-enterprise.ts  seed-opensource-vectors.ts  technical_specifications.md  test_ai_agent_flow.py  todo.md  vite.config.ts  whitepaper.md
.browser_data_dir/: Local State  SingletonCookie  SingletonLock  SingletonSocket
.browser_data_dir/CertificateRevocation/10245/: manifest.fingerprint
.browser_data_dir/CertificateRevocation/10246/: manifest.fingerprint
.browser_data_dir/Default/: BrowsingTopicsState  Cookies  DIPS  History-journal  InterestGroups-wal  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Visited Links  Web Data
.browser_data_dir/Default/Extension Rules/: LOG
.browser_data_dir/GrShaderCache/: data_1  index
.browser_data_dir/GraphiteDawnCache/: data_1  index
.browser_data_dir/ShaderCache/: data_1  index
.browser_data_dir/component_crx_cache/: hfnkpimlhhgieaddgfemjhofmfblmnib_1.0057c9b396e8bc64ae29547140675f935602630a1cb90c4925470155c1877877
.browser_data_dir/segmentation_platform/: ukm_db
.config/code-server/: config.yaml
.config/gh/: hosts.yml
.github/workflows/: ci.yml
ai-services/: README.md  requirements.txt
backend/: .env.example  README.md  package.json
backend/src/: app.module.ts  main.ts
client/: index.html
client/public/: llms.txt  openapi.json  robots.txt  sitemap.xml
client/src/: App.tsx  index.css
docs/: AI_QUICK_START.md  API_DOCUMENTATION.md  APP_STORE_SUBMISSION.md  DEPLOYMENT_GUIDE.md  FILECOIN_DESIGN_ANALYSIS.md  FILECOIN_UI_DETAILS.md  IOS_DEPLOYMENT_GUIDE.md  OCR_QR_FEATURE.md  PRIVACY_POLICY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  SDK_QUICK_START.md  UPGRADE_ANALYSIS.md  WEB_APP_GUIDE.md  WHITEPAPER.md  WHITEPAPER_COMPLETE.md  WHITEPAPER_V2_ADDENDUM.md  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/api/: overview.md
docs/guide/: introduction.md  quick-start.md
docs/plugin-submissions/: ANTHROPIC_PLUGIN_SUBMISSION.md  ANTHROPIC_SUBMISSION_GUIDE.md  OPENAI_PLUGIN_SUBMISSION.md  OPENAI_SUBMISSION_GUIDE.md
drizzle/: 0001_hot_morgan_stark.sql  0002_nappy_gravity.sql  0003_handy_lady_vermin.sql  0004_stormy_gladiator.sql  0005_dashing_rictor.sql  0006_cooing_true_believers.sql  0007_true_firebird.sql  0008_safe_master_mold.sql  0009_misty_frank_castle.sql  schema.ts  trial_usage.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  _journal.json
examples/: README.md  javascript_example.js  python_example.py
mobile-app/: App.tsx  README.md  app.json  package.json  pnpm-lock.yaml
scripts/: seed-data.mjs  seed-example-vectors.mjs  seed-example-vectors.ts
sdk/python/: MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  USAGE_GUIDE.md  awareness_network_async.py  awareness_network_sdk.py  awareness_network_sdk.pyi  pyproject.toml  setup.py  test_awareness_sdk.py
sdk/python/examples/: ai_agent_example.py
server/: ab-test-framework.ts  ai-auth-api.ts  ai-memory-api.ts  api-key-manager.ts  api-key.test.ts  blog-db.ts  blog.test.ts  collaborative-filtering.ts  consumer-analytics.ts  creator-dashboard.ts  db.ts  latentmas-api.ts  latentmas-core.test.ts  latentmas-core.ts  mcp-api.ts  products.ts  purchase-api.ts  quality-control.ts  recommendation-engine.ts  routers.ts  semantic-index.ts  streaming-api.ts  stripe-client.ts  stripe-webhook.ts  trial-api.ts  vector-invocation.test.ts  vector-invocation.ts
server/_core/: index.ts
server/latentmas/: index.ts  memory-exchange.ts  types.ts  w-matrix-generator.ts  w-matrix-service.ts
shared/: genesis-memories.ts  memory-nft-schema.ts
(+848 files in other folders)
